persistent theme switcg

--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -81,7 +81,7 @@
       flex-direction: column;
       align-items: flex-end;
       font-size: 0.95rem;
-      padding:1rem;
+      padding-top:1rem;
       position: relative;
       &::before {
         content: "";
