persistent theme switch

--- a/src/scss/components/_headings.scss
+++ b/src/scss/components/_headings.scss
@@ -56,7 +56,7 @@ h2 {
 .call-to-action {
   position: absolute;
   background: var(--Primary);
-  color: var(--Background);
+  color: var(--ActionColor);
   right:0;
   font-size: 1rem;
   padding:0.25rem 1.5rem;
