--- a/src/scss/themes/_light.scss
+++ b/src/scss/themes/_light.scss
@@ -3,6 +3,9 @@
     --Background50: #{$light-bg-50};
     --Secondary: #{$light-secondary};
     --Primary: #{$light-primary};
+    --PrimaryText: #{$light-primary-text};
+    --ActionColor: #fff;
+
     --Primary50: #{$light-primary-50};
     --Text: #{$light-text};
     --Text50: #{$light-text-50};
