--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -42,6 +42,12 @@
             </main>
         </div>
         <div class="filler"></div>
+        {% set inlineJs %}
+            {% include "scripts/inline-critical.js" %}
+        {% endset %}
+        <script>
+            {{ inlineJs | jsmin | safe }}
+        </script>
         <!-- TODO  split  js into pages -->
         <script src="{{ assets.getPath("index.js")}}" type="module"></script>
     </body>
