--- a/src/scss/components/_actionbar.scss
+++ b/src/scss/components/_actionbar.scss
@@ -35,7 +35,7 @@
 
     .action-active {
       a {
-        color: var(--Primary);
+        color: var(--Text);
       }
       svg {
         fill: var(--Primary);
