--- a/src/scss/components/post.scss
+++ b/src/scss/components/post.scss
@@ -10,6 +10,7 @@ live-demo {
     border-radius: 0.2rem;
     overflow: auto;
     background: var(--Secondary);
+    margin-bottom: 1rem;
     div[contenteditable] {
         margin:0.5rem;
         height: 100%;
@@ -89,7 +90,7 @@ html,body {
         z-index: 10;
 
         a {
-            color: var(--Primary);
+            color: var(--PrimaryText);
         }
 
         figure {
