--- a/src/scss/syntax/_code.scss
+++ b/src/scss/syntax/_code.scss
@@ -35,7 +35,9 @@
  
  :not(pre) > code[class*="language-"],
  pre[class*="language-"] {
-     background: var(--code-background, var(--Secondary));
+    background: var(--Secondary);
+    padding:0.5rem;
+    margin-bottom: 1rem;
  }
  
  /* Inline code */
