--- a/src/scss/themes/_dark.scss
+++ b/src/scss/themes/_dark.scss
@@ -3,6 +3,8 @@
     --Background50: #{$dark-bg-50};
     --Secondary: #{$dark-secondary};
     --Primary: #{$dark-primary};
+    --PrimaryText: #{$dark-primary};
+    --ActionColor: var(--Background);
     --Primary50: #{$dark-primary-50};
     --Text: #{$dark-text};
     --Text50: #{$dark-text-50};
@@ -20,6 +22,6 @@
     --code-operator: var(--Primary);
     --code-number: #B48EAD;
     --code-attr-name: #A3BE8C;
-    --code-attr-value: #88C0D0;
+    --code-attr-value: #7fe3ff;
     --code-regex: #EBCB8B;
 }
