--- a/src/_includes/partials/hero.html
+++ b/src/_includes/partials/hero.html
@@ -1,6 +1,6 @@
 <div class="hero-wrap">
     <article class="hero">
-        <div class="header-wrap"><h1>{{ title }}</h1></div>
+        <div class="header-wrap"><h1 class="text-in fourthin">{{ title }}</h1></div>
         {% include "img/hero.svg" %}
     </article>
 </div>
