--- a/src/scss/components/post.scss
+++ b/src/scss/components/post.scss
@@ -160,49 +160,4 @@ blockquote {
     }
 }
 
-.post-hero {
-    position: relative;
-    &:before {
-        content:"";
-        background-image: linear-gradient(to bottom, var(--Background)0%, transparent 20vw,var(--Background) 60vh)
-        , url(/images/ill_back.svg);
-        background-size:111%;
-        background-position:10% 30%;
-        background-repeat: no-repeat;
-        position: absolute;
-        top:0;
-        bottom:0;
-        left:0;
-        right:0;
-        opacity:0.05;
-        background-attachment: fixed;
-    }
-}
-
-@media screen and (max-width: 75em) {
-    .post-hero {
-        position: relative;
-        &:before {
-            background-size: 118%;
-            background-repeat: no-repeat;
-            background-position-x: 60%;
-            background-position-y: 0%;
-            background-image: linear-gradient(to bottom, var(--Background) 5%, transparent $header+8rem,var(--Background) 32vw)
-            , url(/images/ill_back.svg);
-        }
-    }
-}
-
-@media screen and (max-width: 45em) {
-    .post-hero {
-        position: relative;
-        &:before {
-            background-size: 118%;
-            background-repeat: no-repeat;
-            background-position-x: 60%;
-            background-position-y:3%;
-            background-image: linear-gradient(to bottom, var(--Background) 11%, transparent 18%,var(--Background) 33vh)
-            , url(/images/ill_back.svg);
-        }
-    }
-}
+@include backHeros(".post-hero");
