--- a/src/_includes/layouts/about.njk
+++ b/src/_includes/layouts/about.njk
@@ -9,7 +9,7 @@
 
 <article class="post content">
     <div slot="observable" class="post-title">
-        <h1>{{ title }}</h1>
+        <h1 class="text-in thirdin">{{ title }}</h1>
     </div>
     <section class="post-content">
         {{ content | safe }}
