--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -9,7 +9,7 @@
 
 <article class="post content">
     <div slot="observable" class="post-title">
-        <h1>{{ title }}</h1>
+        <h1 class="text-in thirdin">{{ title }}</h1>
     </div>
     {% set tags =  post.tags %}
     {% set date =  post.date %}
