--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -2,6 +2,8 @@
 $dark-bg: #343434;
 $dark-bg-50: #3f3f3f;
 $dark-secondary: #2b2a2a;
+$dark-secondary-50: #262525;
+$shoe: #ba9c72;
 $dark-primary:#74baff;
 $dark-primary-50: #74a9de;
 $dark-text: #F0F0F0;
@@ -19,6 +21,7 @@ $light-text-50:#2E4157;
 $light-highlight: #e4e3e3;
 
 $white: #f0f0f0;
+$grey: #b5b5b5;
 
 @import "./themes/dark";
 @import"./themes/light";
