--- a/src/scss/themes/_dark.scss
+++ b/src/scss/themes/_dark.scss
@@ -11,6 +11,8 @@
     --Highlight: #{$dark-highlight};
 
     --HeroBorders: #{$dark-secondary};
+    --HeroLegs: #{$dark-secondary-50};
+    --HeroShoe: #{$shoe};
     --HeroWhite: #{$dark-text};
 
     --code-text: var(--Text);
