--- a/src/scss/themes/_light.scss
+++ b/src/scss/themes/_light.scss
@@ -12,7 +12,9 @@
     --Highlight: #{$light-highlight};
 
     --HeroBorders: #{$dark-secondary};
+    --HeroLegs: #{$dark-secondary-50};
     --HeroWhite: #{$dark-text};
+    --HeroShoe: #{$shoe};
 
     --code-text: var(--Text);
     --code-background: transparent;
