--- a/src/scss/critical.scss
+++ b/src/scss/critical.scss
@@ -50,6 +50,8 @@ a {
 @import "./components/collapse";
 @import "./components/post-tags";
 
+@import "./components/post-common";
+
 /* todo move  to post.scss*/
 @import "./components/post";
 @import "./components/video";
