series and series on cards

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -32,7 +32,7 @@
     </head>
     <body>
         <input aria-label="Switch theme colors" type="checkbox" id="theme" name="theme" class="visually-hidden">
-        <div class="wrapper page-layout">
+        <div class="wrapper page-layout {{containerClass}}">
             {% include "partials/actionbar.html" %}
             <main id="main-content">
                 <intersect-detect class="main-content">
