--- a/src/_includes/partials/post-meta.html
+++ b/src/_includes/partials/post-meta.html
@@ -1,4 +1,4 @@
 <div class="post-meta">
-    <span class="mins-read">{{postContent | timeToRead   }} read</span>
-    <time class="post-date sticky-date" datetime="{{ date | htmlDateString }}">{{ date | readableDate }}</time>
+    <span class="post-meta-detail">{{postContent | timeToRead   }} read</span>
+    {% include './post-date.html' %}
 </div>
