--- a/src/scss/components/_headings.scss
+++ b/src/scss/components/_headings.scss
@@ -22,6 +22,17 @@ h2 {
 
 }
 
+.call-to-action-heading {
+  .subtitle {
+    margin-right: 9.3rem;
+  }
+  .subtitleDetail {
+    font-style: italic;
+    font-weight: normal;
+    display: inline-block;
+  }
+}
+
 h2 {
   position: sticky;
   top: $header;
@@ -45,12 +56,6 @@ h2 {
     transition: clip-path 0.3s linear;
     
   }
-
-  h2 {
-    background: var(--Background);
-    position: relative;
-    display: flex;
-  }
 }
 
 .call-to-action {
@@ -70,7 +75,9 @@ h2 {
 }
 
 
-
+:root {
+  --font-size-small: 0.875rem;
+}
 
 @media screen and (max-width: 45em) {
   h1 {
@@ -87,7 +94,14 @@ h2 {
   }
 }
 
+.padded-title {
+  margin-bottom: 2rem;
+}
+
 @media screen and (min-width: 3000px) {
+  :root {
+    --font-size-small: 1.2rem;
+  }
   h1 {
     font-size: $h1-size-large;
     line-height: 5vw;
