--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -2,8 +2,10 @@
 @import "../colors";
 
 .post-card {
+  position: relative;
   border-radius: 3px;
   transition: transform 250ms ease-out;
+  overflow: hidden;
   z-index: 1;
   &:hover, &:focus {
     transform: scale(0.98) translateY(0.3rem);
@@ -16,11 +18,11 @@
     display: flex;
     align-items: flex-end;
     flex-wrap: wrap;
+    margin-top:1rem;
 
   }
     .post-title-link {
         min-height: 7rem;
-        padding-bottom:1rem;
         position: relative;
         > div {
           display: flex;
@@ -40,12 +42,12 @@
     }
     --post-card-height: auto;
     --post-card-width: 25rem;
+    min-width: 260px;
     max-width: 800px;
     height: 100%;
     background: var(--Secondary);
     display: flex;
     flex-direction: column;
-    overflow: hidden;
     .post-img-link {
       .post-img {
         height: 11rem;
@@ -93,5 +95,68 @@
     height: 0.15rem;
     width: 100%;
     background: var(--Primary);
+  }
+}
+
+.post-series {
+  font-size: var(--font-size-small);
+  font-style: italic;
+  margin-top:0.5rem;
+  flex: 1;
+  display: flex;
+  align-items: flex-end;
+}
+
+.series-info {
+  position: absolute;
+  top:0;
+  right:1rem;
+  z-index: 1;
+  width:3rem;
+  background: var(--White);
+  padding:0 0.1rem 0.1rem 0.1rem;
+  clip-path: polygon(50% 0%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
+  .num-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    margin-top: var(--font-size-small);
+    padding-top:var(--font-size-small);
+    &:before {
+      content:"SERIES";
+      position: absolute;
+      top:0.25rem;
+      width: 100%;
+      text-align: center;
+      font-size:  calc(0.6 * var(--font-size-small));
+      font-style: italic;
+    }
+    &:after {
+      content: "";
+      margin-top:0.25rem;
+      height:0.08rem;
+      width: 75%;
+      background:var(--Text);
+      position: absolute;
+      top: 76%;
+    }
+  }
+  .series-bg {
+    padding:0.25rem 0.25rem 2rem 0.25rem;
+    clip-path: polygon(50% 0%, 100% 0, 100% 85%, 50% 100%, 0 85%, 0 0);
+    background:var(--Secondary);
+  }
+  .current {
+    font-weight: bold;
+    font-size: calc(3 * var(--font-size-small));
+    line-height: calc(1.1 * var(--font-size-small));
+    margin-bottom: 0.5rem;
+  }
+  .total {
+    font-size:  calc(0.6 * var(--font-size-small));
+    font-style: italic;
+    padding: 0;
   }
 }
