--- a/src/scss/components/_toggle.scss
+++ b/src/scss/components/_toggle.scss
@@ -1,4 +1,3 @@
-
 $width: 3.5rem;
 $height: 1.5rem;
 $btn-width: 1.2rem;
@@ -15,16 +14,18 @@ html.transition *:after {
 
 :root {
   @include light;
-  --White: #{$white};
+  --White: #fff;
 }
 
-.light, .dark {
+.light,
+.dark {
   /* important so theme switch animation doesn't break this */
   transition: opacity 250ms linear !important;
 }
 
-#theme:checked + .wrapper, #theme:checked + .wrapper + .filler {
-  @include dark;  
+#theme:checked + .wrapper,
+#theme:checked + .wrapper + .filler {
+  @include dark;
 }
 
 #theme:checked + .wrapper {
@@ -35,62 +36,64 @@ html.transition *:after {
   }
 }
 
-
-$long-anim:1.1s;
-$short-anim:.75s;
+$long-anim: 1.4s;
+$short-anim: 0.75s;
 /* Defaults */
-#theme:checked + .wrapper {
+#theme:checked + .anim-bg {
   &:before {
     @include animateBGDark($long-anim);
   }
-  .post-hero {
-    &:before {
-      @include animateBGDark($short-anim);
-    }
+}
+
+#theme:checked + .wrapper .post-hero {
+  &:before {
+    @include animateBGDark($short-anim);
   }
 }
 
-#theme + .wrapper {
+#theme + .anim-bg {
   &:before {
     @include animateBGLight($long-anim);
   }
-  .post-hero {
+}
+
+#theme + .wrapper .post-hero {
     &:before {
       @include animateBGLight($short-anim);
     }
-  }
 }
 
 @media (prefers-color-scheme: light) {
   :root {
-      @include light; 
+    @include light;
   }
-  #theme:checked + .wrapper, #theme:checked + .wrapper + .filler {
-      @include dark;  
+  #theme:checked + .wrapper,
+  #theme:checked + .wrapper + .filler {
+    @include dark;
   }
 
-  #theme + .wrapper {
+  #theme + .anim-bg {
     &:before {
       @include animateBGLight($long-anim);
     }
-    .post-hero {
-      &:before {
-        @include animateBGLight($short-anim);
-      }
+  }
+  #theme + .wrapper .post-hero {
+    &:before {
+      @include animateBGLight($short-anim);
     }
   }
 
-  #theme:checked + .wrapper {
+  #theme:checked + .anim-bg {
     &:before {
       @include animateBGDark($long-anim);
     }
-    .post-hero {
-      &:before {
-        @include animateBGDark($short-anim);
-      }
-    }
   }
 
+  #theme:checked + .wrapper .post-hero {
+    &:before {
+      @include animateBGDark($short-anim);
+    }
+  }
 
   /* swap the  icon positions */
   .toggle-icons {
@@ -109,7 +112,7 @@ $short-anim:.75s;
     .light {
       opacity: 1;
     }
-  
+
     .dark {
       opacity: 0;
     }
@@ -117,42 +120,42 @@ $short-anim:.75s;
 }
 
 @media (prefers-color-scheme: dark) {
+  :root {
+    @include dark;
+  }
 
-    :root {
-        @include dark; 
+  /* we want dark theme a little darker */
+  #theme + .anim-bg {
+    &:before {
+      @include animateBGDark($long-anim);
     }
-  
-    /* we want dark theme a little darker */
-    #theme + .wrapper {
-      &:before {
-        @include animateBGDark($long-anim);
-      }
-      .post-hero {
-        &:before {
-          @include animateBGDark($short-anim);
-        }
-      }
+  }
+  #theme + .wrapper .post-hero {
+    &:before {
+      @include animateBGDark($short-anim);
     }
-  
-    #theme:checked + .wrapper, #theme:checked + .wrapper + .filler {
-        @include light;  
+  }
+
+  #theme:checked + .wrapper,
+  #theme:checked + .wrapper + .filler {
+    @include light;
+  }
+
+  #theme:checked + .anim-bg {
+    &:before {
+      @include animateBGLight($long-anim);
     }
-  
-    #theme:checked + .wrapper {
-      &:before {
-        @include animateBGLight($long-anim);
-      }
-      .post-hero {
-        &:before {
-          @include animateBGLight($short-anim);
-        }
-      }
-    
+  }
+
+  #theme:checked + .wrapper .post-hero {
+    &:before {
+      @include animateBGLight($short-anim);
+    }
   }
 }
 
 .toggle-li {
-  margin-top:auto;
+  margin-top: auto;
 }
 
 .theme-toggle {
