--- a/src/_includes/partials/series-banner.html
+++ b/src/_includes/partials/series-banner.html
@@ -1,3 +1,4 @@
+{%- if seriesInfo %}
 <div class="series-info">
     <div class="series-bg">
         <div class="num-wrap">
@@ -6,3 +7,4 @@
     </div>
     </div>
 </div>
+{%- endif %}
