--- a/src/scss/_colors.scss
+++ b/src/scss/_colors.scss
@@ -16,7 +16,7 @@ $light-secondary:#f3f0f0;
 $light-primary:#1473E6;
 $light-primary-text: #0053b7;
 $light-primary-50:#1267CF;
-$light-text:#233241;
+$light-text:#2b2a2a;
 $light-text-50:#2E4157;
 $light-highlight: #e4e3e3;
 
