--- a/src/_includes/partials/post-hero.html
+++ b/src/_includes/partials/post-hero.html
@@ -1,11 +1,13 @@
-
 <article class="post-hero">
     <div class="img-wrapper">
-        <div aria-hidden="true" class="overlay"></div>
-    {%- if hero.image and hero.show %}
-        <img width="1000" height="420" alt="{{hero and hero.alt or "Default blog image"}}" src="{{ assets.getPostHero(page, hero)}}" class="hero-img"></img>
-    {% else %}
-    {% include assets.getPostHero(post) %}
-    {%- endif %}
+        <div class="hero-img">
+            {% include 'partials/series-banner.html' %}
+            {%- if hero.image and hero.show %}
+            <img width="1000" height="420" alt="{{hero and hero.alt or "Default blog image"}}"
+                src="{{ assets.getPostHero(page, hero)}}"></img>
+            {% else %}
+            {% include assets.getPostHero(post) %}
+            {%- endif %}
+        </div>
     </div>
 </article>
