--- a/src/scss/components/_logo.scss
+++ b/src/scss/components/_logo.scss
@@ -1,7 +1,9 @@
 .logo {
     margin-left: 1rem;
+    height: 100%;
+    margin-top:0.5rem;
     svg {
-        height: 3rem;
+        height: 80%;
         width: auto;
         max-width: 100%;
     }
