next prev article series

--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -20,8 +20,10 @@
     </div>
     {% include "partials/post-tags.html" %}
     <blockquote>{{tagline}}</blockquote>
+    {% include 'partials/series-nav.html' %}
     <section class="post-content">
         {{ content | safe }}
     </section>
+    {% include 'partials/series-nav.html' %}
 </article>
 {% endblock %}
