--- a/src/_includes/partials/series-banner.html
+++ b/src/_includes/partials/series-banner.html
@@ -1,10 +1,7 @@
 {%- if seriesInfo %}
 <div class="series-info">
     <div class="series-bg">
-        <div class="num-wrap">
-            <span class="current">{{seriesInfo.order}}</span>
-            <span class="total">OF&nbsp;{{seriesInfo.total}}</span>
-    </div>
+        {% include './series-part.html' %}
     </div>
 </div>
 {%- endif %}
