--- a/src/_includes/partials/actionbar.html
+++ b/src/_includes/partials/actionbar.html
@@ -1,4 +1,4 @@
-<nav class="actionbar">
+<nav aria-label="Main" class="actionbar">
     <ul class="actions">
         {%- for entry in collections.all | eleventyNavigation %}
         <li class="action{% if entry.url == page.url %} action-active{% endif %}"><a href="{{ entry.url | url }}">
