recommended next and social share

--- a/src/_includes/partials/post-card.html
+++ b/src/_includes/partials/post-card.html
@@ -15,10 +15,10 @@
         </div>
     </div>
 </a>
-<div class="post-content">
+<div class="post-card-content">
     <a title="{{post.data.title}}" href="{{ post.url }}" class="post-title-link">
         <div>
-            <span class="post-title post-heading">{{ post.data.title }}</span>
+            <span class="post-heading">{{ post.data.title }}</span>
             <p class="tagline">{{post.data.tagline}}</p>
         </div>
     </a>
