--- a/src/_includes/partials/series-card.html
+++ b/src/_includes/partials/series-card.html
@@ -1,7 +1,7 @@
 {% set firstPost = series.posts[0] %}
 {% set lastPost = series.posts[series.posts.length - 1] %}
 {% set date = lastPost.date %}
-<div class="post-content">
+<div class="post-card-content">
     <a title="{{series.title}}" href="{{seriesUrl }}" class="post-title-link">
         <div>
             <span class="post-title post-heading">{{ series.title }}</span>
