--- a/src/_includes/layouts/post.njk
+++ b/src/_includes/layouts/post.njk
@@ -16,6 +16,7 @@
     {% set postContent = content %}
     {% set date = page.date %}
     <div class="post-meta-sticky">
+        {% include 'partials/share-page.html' %}
         {% include "partials/post-meta.html" %}
     </div>
     {% include "partials/post-tags.html" %}
@@ -25,5 +26,6 @@
         {{ content | safe }}
     </section>
     {% include 'partials/series-nav.html' %}
+    {% include 'partials/recommended-posts.html' %}
 </article>
 {% endblock %}
