--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -66,18 +66,22 @@
    
     max-width: $max-post-width;
     width: 100%;
-    margin: 0 auto;
     height: 100%;
+    margin: 0 auto;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
     position: absolute;
+    overflow: hidden;
     img, svg {
+      display: flex;
       width: 100%;
       height: 100%;
       -o-object-fit: cover;
       object-fit: cover;
+      object-position: 50% 50%;
+      -o-object-position: 50% 50%;
     }
   }
 }
