--- a/src/scss/components/_post-card.scss
+++ b/src/scss/components/_post-card.scss
@@ -1,5 +1,6 @@
 
 @import "../colors";
+$card-padding: 1rem;
 
 .post-card {
   position: relative;
@@ -77,7 +78,7 @@
       }
     }
 
-    .post-content {
+    .post-card-content {
       padding:$card-padding;
       display: flex;
       flex-direction: column;
@@ -112,4 +113,11 @@
 
 .post-card .series-info {
   right:1rem;
+}
+
+
+@media screen and (max-width: 45em) {
+  .post-card {
+    width: 100%;
+  }
 }
